# wordpress-mcp-server

./: .dockerignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml
docs/: Docker-Deployment-Guide.md  Port-Configuration-Guide.md
scripts/: backup.sh  event_replay.py  event_summary.py  event_viewer.py  logs.sh  reset.sh  rich_progress_test.py  setup.sh  start.sh  status.sh  stop.sh  test.sh
src/wordpress-mcp-server/: __init__.py  app.py  cli.py  server.py
tests/: test_app.py
tests/agents/: test_agent.py
tests/executor/: test_workflow.py  test_workflow_signal.py
tests/executor/temporal/: test_signal_handler.py  test_temporal_executor.py  test_workflow_registry.py
tests/mcp/: test_mcp_aggregator.py  test_mcp_connection_manager.py
tests/utils/: test_pydantic_type_serializer.py
tests/workflows/evaluator_optimizer/: test_evaluator_optimizer.py
tests/workflows/intent_classifier/: conftest.py  test_intent_classifier_embedding_cohere.py  test_intent_classifier_embedding_openai.py  test_intent_classifier_llm_anthropic.py  test_intent_classifier_llm_openai.py
tests/workflows/llm/: test_augmented_llm_anthropic.py  test_augmented_llm_azure.py  test_augmented_llm_bedrock.py  test_augmented_llm_google.py  test_augmented_llm_ollama.py  test_augmented_llm_openai.py
tests/workflows/orchestrator/: conftest.py  test_orchestrator.py  test_orchestrator_integration.py  test_orchestrator_models.py  test_orchestrator_prompts.py
tests/workflows/parallel/: conftest.py  test_fan_in.py  test_fan_out.py  test_parallel_llm.py
tests/workflows/router/: conftest.py  test_router_base.py  test_router_embedding.py  test_router_embedding_cohere.py  test_router_embedding_openai.py  test_router_llm.py  test_router_llm_anthropic.py  test_router_llm_openai.py
tests/workflows/swarm/: conftest.py  test_swarm.py  test_swarm_anthropic.py  test_swarm_openai.py
